[package]
name = "hurl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
heck = "0.4.1"
log = "0.4.20"
pretty_env_logger = "0.5.0"
serde = "1.0.196"
serde_json = "1.0.113"
reqwest = "0.11.23"
rpassword = "7.3.1"
